- Refactoring ModelMapperConfig.